# op-txm

./: .gitignore  README.md  pyproject.toml
bom/: generate_bom.py  txm_bom.csv  txm_bom_dfm.txt
docs/: drc-fix-plan.md  pcb_routing_knowhow.md  working-approach.md
pcb/: layout.py  notes.md  op-txm.kicad_dru  op-txm.kicad_pcb  op-txm.kicad_pro  outline.py  project.py
sim/: boost_72v.py  dc_servo.py  dual_capsule_eq.py  generate_plots.py  phantom_budget.py  signal_chain.py  tx_output.py
