[project]
name = "op-txm"
version = "0.1.0"
description = "Transformer-output condenser microphone — simulation toolchain (no optical compressor)"
requires-python = ">=3.11"
dependencies = [
    "PySpice>=1.5",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "kiutils>=1.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
]
